--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name">温榆河</string>
+    <string name="app_name">畅游温榆</string>
     <string name="str_wyh">温榆河</string>
     <string name="str_shared">str_shared</string>
     <!--底部导航栏-->
