--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,8 @@
     <string name="grid_visit">游客服务</string>
     <string name="grid_line_guide">线路导览</string>
     <string name="grid_ar_science">AR科普</string>
-    <string name="grid_plant_wiki">景区百科</string>
+    <string name="grid_scenic_wiki">景区百科</string>
+    <string name="grid_plant_wiki">植物百科</string>
     <string name="grid_book">场馆预约</string>
     <string name="grid_ar">AR游园</string>
     <string name="grid_smart_car">智慧停车</string>
@@ -34,6 +35,7 @@
 
     <!--虚拟游园-->
     <string name="str_ar">虚拟游园</string>
+    <string name="full_ar">全景游园</string>
     <string name="str_ar_sub">随时随地查找景点不迷路</string>
 
     <string name="str_more">更多</string>
