--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     <string name="visitor_server_lscx">绿色出行</string>
     <string name="visitor_server_device">公共设施</string>
     <string name="visitor_server_gjcx">公交出行</string>
+    <string name="visitor_server_baiduche">摆渡车</string>
     <string name="visitor_ai_budao">AI步道</string>
     <string name="visitor_wifi_conn">WIFI连接</string>
 
